--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-feed": "^1.3.21",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-sharp": "^1.6.43",
+    "gatsby-remark-images": "^1.5.62",
     "gatsby-source-filesystem": "^1.5.31",
     "gatsby-transformer-remark": "^1.7.40",
+    "lodash": "^4.17.10",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
