--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.43",
+    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-images": "^1.5.62",
     "gatsby-source-filesystem": "^1.5.31",
     "gatsby-transformer-remark": "^1.7.40",
